// time.proto

syntax = "proto3";
package grpctest.time.v1;
option go_package = "pkg/time";


message GetCurrentTimeRequest {
}

message GetCurrentTimeResponse {
  string date = 1;
}

service TimeService{
  rpc GetCurrentTime(GetCurrentTimeRequest) returns (GetCurrentTimeResponse);
}
